--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,9 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<style>
+<!--
+
+  <style>
   :host {
     --bright-blue: oklch(51.01% 0.274 263.83);
     --electric-violet: oklch(53.18% 0.28 296.97);
@@ -324,6 +326,8 @@
   </div>
 </main>
 
+-->
+
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
@@ -332,5 +336,28 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<h1>Aplicação</h1>
+<app-header></app-header>
 <router-outlet />
+<!-- router-outlet é onde da página padrão SPA (single page aplication) são carregados os 'componentes' que representam as páginas -->
+
+<hr/>
+<p>Rodapé</p>
+
+<ul>
+  <li>Item 1 - {{descricao1}}</li>
+  <li>Item 2 - {{descricao2}}</li>
+</ul>
+
+<label>Digite a descrição do item 1</label>
+<br/>
+<input [(ngModel)]="descricao1" />
+
+<!--
+<app-header></app-header>
+-->
+
+<!--
+<h1>Primeira Página</h1>
+<app-header></app-header>
+-->
