introdução dos conceitos de bindings, pipes e services

--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -1,3 +1,9 @@
 <h1>Componente Header</h1>
 
-<a routerLink="/client">Ir para cliente</a>
+<p> 
+    <a routerLink="">Home</a>
+    ----    
+    <a routerLink="/client">Ir para cliente</a>
+    ----    
+    <a routerLink="/binding">Ir para binding</a>
+</p>
