conceitos de guard, storage e eventos iniciais

--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -3,6 +3,8 @@
 <p> 
     <a routerLink="">Home</a>
     ----    
+    <a routerLink="/login">Ir para login</a>
+    ----    
     <a routerLink="/client">Ir para cliente</a>
     ----    
     <a routerLink="/binding">Ir para binding</a>
