--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -8,4 +8,6 @@
     <a routerLink="/client">Ir para cliente</a>
     ----    
     <a routerLink="/binding">Ir para binding</a>
+    ----    
+    <a routerLink="/rxjs">Ir para rxjs</a>
 </p>
