introdução do conceito de service e requisição http fazendo uma requisição para uma fake api

--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -10,4 +10,6 @@
     <a routerLink="/binding">Ir para binding</a>
     ----    
     <a routerLink="/rxjs">Ir para rxjs</a>
+    ----    
+    <a routerLink="/pessoa">Ir para pessoa</a>
 </p>
