aprofundamento componentes angular material para formulários e estilos, aprofundamento lógica formulários

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -336,18 +336,25 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<h1>Aplicação</h1>
+<h3>Aplicação</h3>
 <app-header></app-header>
 <router-outlet />
 <!-- router-outlet é onde da página padrão SPA (single page aplication) são carregados os 'componentes' que representam as páginas -->
 
 <hr/>
-<p>Rodapé</p>
+<h4>Rodapé</h4>
 
 <ul>
   <li>Item 1 - {{descricao1}}</li>
   <li>Item 2 - {{descricao2}}</li>
 </ul>
+
+<div>
+  <button mat-stroked-button color="primary">Botão bonito do angular material</button>
+  <p>angular material = bootstrap</p>
+</div>
+
+<br/>
 
 <label>Digite a descrição do item 1</label>
 <br/>
