--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -1,15 +1,34 @@
-<h1>Componente Header</h1>
+<h4>Componente Header</h4>
 
-<p> 
-    <a routerLink="">Home</a>
-    ----    
-    <a routerLink="/login">Ir para login</a>
-    ----    
-    <a routerLink="/client">Ir para cliente</a>
-    ----    
-    <a routerLink="/binding">Ir para binding</a>
-    ----    
-    <a routerLink="/rxjs">Ir para rxjs</a>
-    ----    
-    <a routerLink="/pessoa">Ir para pessoa</a>
-</p>
+<div>
+    <p>Menu básico aprendizado outras funcs.</p>
+    <p> 
+        <a routerLink="">Home</a>
+        ----    
+        <a routerLink="/login">Ir para login</a>
+        ----    
+        <a routerLink="/client">Ir para cliente</a>
+        ----    
+        <a routerLink="/binding">Ir para binding</a>
+        ----    
+        <a routerLink="/rxjs">Ir para rxjs</a>
+        ----    
+        <a routerLink="/pessoa">Ir para pessoa</a>
+        ----    
+        <a routerLink="/user">Ir para user</a>
+    </p>
+</div>
+
+<div>
+    <p>Menu angular material</p>
+    <button mat-stroked-button color="primary" [matMenuTriggerFor]="mainMenu">Menu</button>
+    <mat-menu #mainMenu="matMenu">
+        <button mat-menu-item [routerLink]="['login']">Login</button>
+        <button mat-menu-item [routerLink]="['pessoa/add']">Cadastrar pessoa</button>
+    </mat-menu>
+    <button mat-button color="primary" [routerLink]="['user/add']">User</button>
+    <!-- <mat-menu #userMenu="matMenu">
+        <button mat-menu-item>Item 1</button>
+        <button mat-menu-item>Item 2</button>
+    </mat-menu> -->
+</div>
