--- a/src/app/components/header.component/header.component.html
+++ b/src/app/components/header.component/header.component.html
@@ -26,7 +26,7 @@
         <button mat-menu-item [routerLink]="['login']">Login</button>
         <button mat-menu-item [routerLink]="['pessoa/add']">Cadastrar pessoa</button>
     </mat-menu>
-    <button mat-button color="primary" [routerLink]="['user/add']">User</button>
+    <button mat-button color="primary" [routerLink]="['user/form']">User</button>
     <!-- <mat-menu #userMenu="matMenu">
         <button mat-menu-item>Item 1</button>
         <button mat-menu-item>Item 2</button>
