--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -337,7 +337,10 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <h3>Aplicação</h3>
-<app-header></app-header>
+<p *ngIf="parametroVindoDoFilho">parâmetro vindo do componente filho: {{parametroVindoDoFilho}}</p>
+<button mat-button (click)="chamarFuncaoFilho()">Chama função filho</button>
+
+<app-header #filho [descricao1]="descricao1" (onItemSelected)="parametroVindoDoFilho = $event"></app-header>
 <router-outlet />
 <!-- router-outlet é onde da página padrão SPA (single page aplication) são carregados os 'componentes' que representam as páginas -->
 
